Checking in fix for bug 81308 which caused JS errors in XUL prototype scripts to not be shown on the console, patch by sfraser@netscape.com, sr=sfraser@netscape.com, jst@netscape.com, r=pollmann@netscape.com